--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
       margin-bottom: 0.5rem;
     }
 
+    .image-compare {
+      display: flex;
+      gap: 1rem;
+      margin-top: 1.5rem;
+    }
+
+    .image-compare div {
+      flex: 1;
+      text-align: center;
+    }
+
+    .image-compare img {
+      max-width: 50%;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+
+    }
     .footer {
       text-align: center;
       font-size: 0.9rem;
@@ -79,11 +96,24 @@
 </head>
 <body>
   <div class="container">
-    <h2>🔐 Verifikasi Tanda Tangan Digital</h2>
-    <p>Unggah file ZIP yang berisi <code>signature.json</code> untuk memverifikasi tanda tangan digital.</p>
+    <h2>🔐 Digital Signature Verification</h2>
+    <p>Upload the ZIP file containing <code>signature.json</code> to verify the digital signature.</p>
     <input type="file" id="zipInput" accept=".zip" />
 
+    <h2 id="txtres"><center>Result</center></h2>
     <div id="result" class="result-card" style="display: none;"></div>
+
+    <div class="image-compare" style="display: none;" id="imageCompare">
+      <p><i><center>Example Result</center></i></p>
+      <div>
+        <p>✅<i> Valid</i></p>
+        <img src="success-example.png" alt="Contoh Valid">
+      </div>
+      <div>
+        <p>❌<i> NOT Valid</i></p>
+        <img src="failed-example.png" alt="Contoh Tidak Valid">
+      </div>
+    </div>
 
     <div class="footer">Powered by JSZip + Forge + WebCrypto</div>
     <div><center>Made by Alextian Creative</center></div>
@@ -96,12 +126,16 @@
 
     document.getElementById('zipInput').addEventListener('change', async (event) => {
       const file = event.target.files[0];
+      const resultTxt = document.getElementById('txtres');
       const resultDiv = document.getElementById('result');
+      const imageCompare = document.getElementById('imageCompare');
+      resultTxt.style.display = "block";
       resultDiv.style.display = "block";
+      imageCompare.style.display = "block";
 
       if (!file) {
         resultDiv.className = 'result-card error';
-        resultDiv.innerText = "❌ Tidak ada file ZIP yang dipilih.";
+        resultDiv.innerText = "❌ No ZIP files uploaded. Please select a valid ZIP file containing signature.json.";
         return;
       }
 
@@ -116,7 +150,7 @@
 
         if (hashBase64 !== sigJson.SHA256Hash) {
           resultDiv.className = 'result-card error';
-          resultDiv.innerHTML = `<strong>❌ File telah dimodifikasi</strong><br>Hash file tidak cocok dengan signature.`;
+          resultDiv.innerHTML = `<strong>❌ File has been modified</strong><br>File HASH does not match signature.<br>Expected: <code>${wrapSignature(sigJson.SHA256Hash)}</code><br>Actual: <code>${hashBase64}</code>`;
           return;
         }
 
@@ -140,20 +174,20 @@
             resultDiv.innerHTML = `
             <div class="value"><span class="label">✅ Signature VALID</span></div>
             <div class="value"><span class="label">Signer     :</span> ${sigJson.Signer}</div>
-            <div class="value"><span class="label">Tanggal    :</span> ${sigJson.Date}</div>
-            <div class="value"><span class="label">Nama File  :</span> ${sigJson.FileName}</div>
+            <div class="value"><span class="label">Dates      :</span> ${sigJson.Date}</div>
+            <div class="value"><span class="label">Filename   :</span> ${sigJson.FileName}</div>
             <div class="value"><span class="label">Signature  :</span><br>
               <code style="word-break:break-all;white-space:pre-line;">${wrapSignature(sigJson.Signature)}</code>
             </div>
           `;
         } else {
           resultDiv.className = 'result-card error';
-          resultDiv.innerHTML = `❌ Signature TIDAK valid! File atau data mungkin telah diubah.`;
+          resultDiv.innerHTML = `❌ Signature is NOT valid! Files or data may have been changed.`;
         }
       } catch (err) {
         console.error(err);
         resultDiv.className = 'result-card error';
-        resultDiv.innerText = "❌ Terjadi kesalahan saat memverifikasi file.\nNama berkas tidak sesuai atau masalah lainnya\n" + err.message;
+        resultDiv.innerText = "❌ An error occurred while verifying the file.\nSignature is NOT valid or there is another problem.\n" + err.message;
       }
     });
   </script>
